// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Pure component match expected snapshot 1`] = `
<div>
  <Aesthetic-ContainerPure
    className="fixedOnTheTop-0-0"
  >
    <div
      className="header-0-2 "
    >
      <Aesthetic-RowPure>
        <Aesthetic-ColumnPure
          className="headerColumn-0-1"
          sm={4}
          xl={3}
          xs={7}
        >
          <Aesthetic-LogotypePure
            className="headerLogoContainer-0-4 "
          />
        </Aesthetic-ColumnPure>
        <Aesthetic-ColumnPure
          className="headerColumn-0-1"
          lg={0}
          lgOffset={0}
          sm={1}
          smOffset={7}
          xs={2}
          xsOffset={3}
        >
          <Aesthetic-HiddenPure
            className="headerMenuButtonContainer-0-7"
            lg="up"
          >
            <Aesthetic-MenuButtonPure
              onClick={[Function]}
            />
          </Aesthetic-HiddenPure>
        </Aesthetic-ColumnPure>
        <Aesthetic-ColumnPure
          className="headerColumn-0-1 navigationLinksContainer-0-6 closed"
          lg={8}
          xl={9}
          xs={12}
        >
          <Aesthetic-NavigationLinkArrayPure
            className="navigationLinks-0-5"
            navigationLinkArray={Array []}
          />
        </Aesthetic-ColumnPure>
      </Aesthetic-RowPure>
    </div>
  </Aesthetic-ContainerPure>
  <div
    className="headerPadding-0-3"
  />
</div>
`;

exports[`Header Pure component with scrolled down document since to "scrollTop: 24" match expected snapshot 1`] = `
<HeaderPure
  classNames={
    Object {
      ".header-0-2.shrinkedHeader": "header-0-2",
      ".headerLogoContainer-0-4.shrinkedHeader": "headerLogoContainer-0-4",
      ".navigationLinksContainer-0-6.closed": "navigationLinksContainer-0-6",
      "fixedOnTheTop": "fixedOnTheTop-0-0",
      "header": "header-0-2",
      "headerColumn": "headerColumn-0-1",
      "headerLogoContainer": "headerLogoContainer-0-4",
      "headerMenuButtonContainer": "headerMenuButtonContainer-0-7",
      "headerPadding": "headerPadding-0-3",
      "navigationLinks": "navigationLinks-0-5",
      "navigationLinksContainer": "navigationLinksContainer-0-6",
    }
  }
  navigationLinkArray={Array []}
>
  <div>
    <Aesthetic-ContainerPure
      className="fixedOnTheTop-0-0"
    >
      <ContainerPure>
        <div
          className="header-0-2 "
        >
          <Aesthetic-RowPure>
            <RowPure>
              <Aesthetic-ColumnPure
                className="headerColumn-0-1"
                sm={4}
                xl={3}
                xs={7}
              >
                <ColumnPure>
                  <Aesthetic-LogotypePure
                    className="headerLogoContainer-0-4 "
                  >
                    <LogotypePure />
                  </Aesthetic-LogotypePure>
                </ColumnPure>
              </Aesthetic-ColumnPure>
              <Aesthetic-ColumnPure
                className="headerColumn-0-1"
                lg={0}
                lgOffset={0}
                sm={1}
                smOffset={7}
                xs={2}
                xsOffset={3}
              >
                <ColumnPure>
                  <Aesthetic-HiddenPure
                    className="headerMenuButtonContainer-0-7"
                    lg="up"
                  >
                    <HiddenPure>
                      <Aesthetic-MenuButtonPure
                        onClick={[Function]}
                      >
                        <MenuButtonPure />
                      </Aesthetic-MenuButtonPure>
                    </HiddenPure>
                  </Aesthetic-HiddenPure>
                </ColumnPure>
              </Aesthetic-ColumnPure>
              <Aesthetic-ColumnPure
                className="headerColumn-0-1 navigationLinksContainer-0-6 closed"
                lg={8}
                xl={9}
                xs={12}
              >
                <ColumnPure>
                  <Aesthetic-NavigationLinkArrayPure
                    className="navigationLinks-0-5"
                    navigationLinkArray={Array []}
                  >
                    <NavigationLinkArrayPure />
                  </Aesthetic-NavigationLinkArrayPure>
                </ColumnPure>
              </Aesthetic-ColumnPure>
            </RowPure>
          </Aesthetic-RowPure>
        </div>
      </ContainerPure>
    </Aesthetic-ContainerPure>
    <div
      className="headerPadding-0-3"
    />
  </div>
</HeaderPure>
`;

exports[`Header Pure component with scrolled down document since to "scrollTop: 100" match expected snapshot 1`] = `
<HeaderPure
  classNames={
    Object {
      ".header-0-2.shrinkedHeader": "header-0-2",
      ".headerLogoContainer-0-4.shrinkedHeader": "headerLogoContainer-0-4",
      ".navigationLinksContainer-0-6.closed": "navigationLinksContainer-0-6",
      "fixedOnTheTop": "fixedOnTheTop-0-0",
      "header": "header-0-2",
      "headerColumn": "headerColumn-0-1",
      "headerLogoContainer": "headerLogoContainer-0-4",
      "headerMenuButtonContainer": "headerMenuButtonContainer-0-7",
      "headerPadding": "headerPadding-0-3",
      "navigationLinks": "navigationLinks-0-5",
      "navigationLinksContainer": "navigationLinksContainer-0-6",
    }
  }
  navigationLinkArray={Array []}
>
  <div>
    <Aesthetic-ContainerPure
      className="fixedOnTheTop-0-0"
    >
      <ContainerPure>
        <div
          className="header-0-2 shrinkedHeader"
        >
          <Aesthetic-RowPure>
            <RowPure>
              <Aesthetic-ColumnPure
                className="headerColumn-0-1"
                sm={4}
                xl={3}
                xs={7}
              >
                <ColumnPure>
                  <Aesthetic-LogotypePure
                    className="headerLogoContainer-0-4 shrinkedHeader"
                  >
                    <LogotypePure />
                  </Aesthetic-LogotypePure>
                </ColumnPure>
              </Aesthetic-ColumnPure>
              <Aesthetic-ColumnPure
                className="headerColumn-0-1"
                lg={0}
                lgOffset={0}
                sm={1}
                smOffset={7}
                xs={2}
                xsOffset={3}
              >
                <ColumnPure>
                  <Aesthetic-HiddenPure
                    className="headerMenuButtonContainer-0-7"
                    lg="up"
                  >
                    <HiddenPure>
                      <Aesthetic-MenuButtonPure
                        onClick={[Function]}
                      >
                        <MenuButtonPure />
                      </Aesthetic-MenuButtonPure>
                    </HiddenPure>
                  </Aesthetic-HiddenPure>
                </ColumnPure>
              </Aesthetic-ColumnPure>
              <Aesthetic-ColumnPure
                className="headerColumn-0-1 navigationLinksContainer-0-6 closed"
                lg={8}
                xl={9}
                xs={12}
              >
                <ColumnPure>
                  <Aesthetic-NavigationLinkArrayPure
                    className="navigationLinks-0-5"
                    navigationLinkArray={Array []}
                  >
                    <NavigationLinkArrayPure />
                  </Aesthetic-NavigationLinkArrayPure>
                </ColumnPure>
              </Aesthetic-ColumnPure>
            </RowPure>
          </Aesthetic-RowPure>
        </div>
      </ContainerPure>
    </Aesthetic-ContainerPure>
    <div
      className="headerPadding-0-3"
    />
  </div>
</HeaderPure>
`;
